--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -1,3 +1,9 @@
+h2    {
+    width: 135px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .chatbox    {
     background-color: aliceblue;
     height: 70%;
